--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "src/dbg/btparser"]
 	path = src/dbg/btparser
-	url = ../btparser
+	url = https://github.com/x64dbg/btparser
 [submodule "deps"]
 	path = deps
-	url = ../deps
+	url = https://github.com/x64dbg/deps
 	shallow = true
